# FossSweeper

./: .clang-format  .gitignore  .gitmodules  .markdownlint.yaml  .shellcheckrc  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: ask_a_question.md  bug_report.md  bug_report.yaml  bug_report.yml  build_problem.md  build_problem.yml  config.yaml  config.yml  feature_addition.md  feature_request.md
.github/workflows/: REUSE Compliance.yaml  Release.yaml  Tests.yaml  Trunk Check.yaml
.reuse/: dep5
.trunk/: .gitignore  actions  notifications  trunk.yaml
CMake/: embed_string.CMake  fosssweeper_version.CMake  fossweeper_version.CMake  get_short_hash.CMake  hash_check.CMake
assets/: README.md
modules/: CMakeLists.txt
modules/desktop_view/: .gitignore  CMakeLists.txt
modules/desktop_view/rc/: CMakeLists.txt  fosssweeper.desktop.in  fosssweeper.icns  fosssweeper.icns.license  fosssweeper.rc  osxbundle.plist.in
modules/desktop_view/src/: AboutDialog.cpp  AboutDialog.hpp  CMakeLists.txt  ConfigDialog.cpp  ConfigDialog.hpp  DesktopApp.cpp  DesktopApp.hpp  DesktopTimer.cpp  DesktopTimer.hpp  DesktopView.cpp  DesktopView.hpp  GameFrame.cpp  GameFrame.hpp  GamePanel.cpp  GamePanel.hpp  GamePanelState.hpp  LicenseDialog.cpp  LicenseDialog.hpp  PixelScaleDialog.cpp  PixelScaleDialog.hpp  TextDialog.cpp  TextDialog.hpp  credits.cpp  credits.cpp.in  credits.hpp  icon.cpp  icon.hpp  license.cpp  license.cpp.in  license.hpp  main.cpp  spritesheet.cpp  spritesheet.hpp  wx_id.hpp  wx_include.hpp
modules/model/: .gitignore  CMakeLists.txt
modules/model/include/fsweep/: Button.hpp  ButtonPosition.hpp  ButtonState.hpp  DesktopModel.hpp  GameConfiguration.hpp  GameDifficulty.hpp  GameModel.hpp  GameState.hpp  LcdDigit.hpp  LcdNumber.hpp  Model.hpp  Point.hpp  Sprite.hpp  Timer.hpp
modules/model/src/: Button.cpp  CMakeLists.txt  DesktopModel.cpp  GameConfiguration.cpp  GameModel.cpp  LcdNumber.cpp  Model.cpp  Sprite.cpp  version.hpp.in
modules/test/: CMakeLists.txt
modules/test/src/: CMakeLists.txt  TestTimer.cpp  TestTimer.hpp  button_position_test.cpp  button_test.cpp  desktop_model_test.cpp  game_configuration_test.cpp  game_model_test.cpp  lcd_number_test.cpp  model_test.cpp
scripts/: README.md  add_extern_submodules.bash  clone_extern_repositories.bash  generate_no_tests.bash  generate_with_tests.bash  install_fedora_packages.bash  install_ubuntu_packages.bash  lint.bash  remove_extern_submodules.bash  reset.bash
